infer import baseline support
includes regenerate refactor to simplify things for
import baseline stuff

also refactors tests to be more clear about what is being
tested

adds more consistency file tests

also adds a warning for when no ref is passed to regenerate, because this has been a source of bugs, esp w/ golang ecosystem

BUG=324084915
PiperOrigin-RevId: 607010268
Change-Id: Ie1aa0143565530179f71b9807aa8b420371666a0